Overloading Operators (+) and (-) Finished
You can now add and subtract using + and - between MemberLists and Members

--- a/FitnessMembership/View/MainWindow.xaml
+++ b/FitnessMembership/View/MainWindow.xaml
@@ -38,8 +38,7 @@
 								 Width="322">
 						<i:Interaction.Triggers>
 								<i:EventTrigger EventName="MouseDoubleClick">
-										<i:InvokeCommandAction Command="{Binding ChangeCommand}"
-																					 CommandParameter="{Binding ElementName=listBox, Path=SelectedItem}"/>
+										<i:InvokeCommandAction Command="{Binding ChangeCommand}"/>
 								</i:EventTrigger>
 						</i:Interaction.Triggers>
 						<ListBox.ItemTemplate>
